// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GIServ Login Component Login page renders without crashing 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="h-screen bg-gradient-to-b from-red-500 to-purple-700 w-full flex justify-center items-center"
        data-testid="login"
      >
        <div
          class="flex flex-col gap-6 bg-neutral-900 p-20 text-center rounded-lg"
        >
          <div
            class="flex h-16 justify-center"
          >
            <img
              src="[object Object]"
            />
          </div>
          <p
            class="text-white"
          >
            Dashboard Login
          </p>
          <input
            class="h-10 outline-none bg-neutral-700 text-center text-white rounded-md"
            placeholder="Id"
          />
          <input
            class="h-10 outline-none bg-neutral-700 text-center text-white rounded-md"
            placeholder="password"
          />
          <button
            class="bg-indigo-900 h-10 rounded-md text-white text-sm text-center"
          >
            Login
          </button>
        </div>
      </div>
    </div>
    <div>
      <div
        class="h-screen bg-gradient-to-b from-red-500 to-purple-700 w-full flex justify-center items-center"
        data-testid="login"
      >
        <div
          class="flex flex-col gap-6 bg-neutral-900 p-20 text-center rounded-lg"
        >
          <div
            class="flex h-16 justify-center"
          >
            <img
              src="[object Object]"
            />
          </div>
          <p
            class="text-white"
          >
            Dashboard Login
          </p>
          <input
            class="h-10 outline-none bg-neutral-700 text-center text-white rounded-md"
            placeholder="Id"
          />
          <input
            class="h-10 outline-none bg-neutral-700 text-center text-white rounded-md"
            placeholder="password"
          />
          <button
            class="bg-indigo-900 h-10 rounded-md text-white text-sm text-center"
          >
            Login
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="h-screen bg-gradient-to-b from-red-500 to-purple-700 w-full flex justify-center items-center"
      data-testid="login"
    >
      <div
        class="flex flex-col gap-6 bg-neutral-900 p-20 text-center rounded-lg"
      >
        <div
          class="flex h-16 justify-center"
        >
          <img
            src="[object Object]"
          />
        </div>
        <p
          class="text-white"
        >
          Dashboard Login
        </p>
        <input
          class="h-10 outline-none bg-neutral-700 text-center text-white rounded-md"
          placeholder="Id"
        />
        <input
          class="h-10 outline-none bg-neutral-700 text-center text-white rounded-md"
          placeholder="password"
        />
        <button
          class="bg-indigo-900 h-10 rounded-md text-white text-sm text-center"
        >
          Login
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GIServ Login Component Login renders without crashing 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="h-screen bg-gradient-to-b from-red-500 to-purple-700 w-full flex justify-center items-center"
      >
        <div
          class="flex flex-col gap-6 bg-neutral-900 p-20 text-center rounded-lg"
        >
          <div
            class="flex h-16 justify-center"
          >
            <img
              src="[object Object]"
            />
          </div>
          <p
            class="text-white"
          >
            Dashboard Login
          </p>
          <input
            class="h-10 outline-none bg-neutral-700 text-center text-white rounded-md"
            placeholder="Id"
          />
          <input
            class="h-10 outline-none bg-neutral-700 text-center text-white rounded-md"
            placeholder="password"
          />
          <button
            class="bg-indigo-900 h-10 rounded-md text-white text-sm text-center"
          >
            Login
          </button>
        </div>
      </div>
    </div>
    <div>
      <div
        class="h-screen bg-gradient-to-b from-red-500 to-purple-700 w-full flex justify-center items-center"
      >
        <div
          class="flex flex-col gap-6 bg-neutral-900 p-20 text-center rounded-lg"
        >
          <div
            class="flex h-16 justify-center"
          >
            <img
              src="[object Object]"
            />
          </div>
          <p
            class="text-white"
          >
            Dashboard Login
          </p>
          <input
            class="h-10 outline-none bg-neutral-700 text-center text-white rounded-md"
            placeholder="Id"
          />
          <input
            class="h-10 outline-none bg-neutral-700 text-center text-white rounded-md"
            placeholder="password"
          />
          <button
            class="bg-indigo-900 h-10 rounded-md text-white text-sm text-center"
          >
            Login
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="h-screen bg-gradient-to-b from-red-500 to-purple-700 w-full flex justify-center items-center"
    >
      <div
        class="flex flex-col gap-6 bg-neutral-900 p-20 text-center rounded-lg"
      >
        <div
          class="flex h-16 justify-center"
        >
          <img
            src="[object Object]"
          />
        </div>
        <p
          class="text-white"
        >
          Dashboard Login
        </p>
        <input
          class="h-10 outline-none bg-neutral-700 text-center text-white rounded-md"
          placeholder="Id"
        />
        <input
          class="h-10 outline-none bg-neutral-700 text-center text-white rounded-md"
          placeholder="password"
        />
        <button
          class="bg-indigo-900 h-10 rounded-md text-white text-sm text-center"
        >
          Login
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
